# vk-archive-messages-parser

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  alembic.ini  config.example.toml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: logging.py  settings.py
backend/app/db/: base.py  fts.py  init_db.py  session.py  types.py
backend/app/models/: conversation.py  message.py
backend/app/parsers/vk_html/: __init__.py  parser.py
backend/app/repositories/: storage.py
backend/app/schemas/: api.py
backend/app/services/: exporter.py  importer.py
backend/scripts/: __init__.py  generate_demo_data.py
backend/tests/: conftest.py  test_api.py  test_db_session.py  test_db_types.py  test_demo_data.py  test_exporter.py  test_importer.py  test_logging.py  test_parser.py  test_settings.py  test_storage.py
backend/tests/fixtures/messages/-101/: messages0.html
backend/tests/fixtures/messages/202/: messages2650.html
backend/tests/fixtures/messages/303/: messages0.html  messages50.html
deploy/migrations/: env.py
deploy/migrations/versions/: 0001_initial.py
docs/: tech.md
web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web-out/: index.html
web-out/assets/: index-XamuM93t.js  index-iNJFRNsQ.css
web/src/: main.tsx  styles.css
web/src/test/: setup.ts
web/src/ui/: App.test.tsx  App.tsx  ConversationsPage.test.tsx  ConversationsPage.tsx  ExportPage.tsx  ImportPage.tsx  SearchPage.tsx
